<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_edit_lection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@android:color/black"
        tools:context="pup.zienkowicz.planlekcji.EditLectionActivity">

        <Spinner
            android:background="@android:color/white"
            android:id="@+id/day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp">
            <TextView
                    android:textColor="@android:color/white"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nameCaption"/>
            <EditText
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:padding="5dp"
                    android:id="@+id/nameText"
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp">
        <TextView
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:text="@string/roomCaption"/>
        <EditText
                android:background="@android:color/white"
                android:textColor="@android:color/black"
                android:padding="5dp"
                android:id="@+id/roomText"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="wrap_content"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp">
        <TextView
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:text="@string/startCaption"/>
        <Spinner
                android:background="@android:color/white"
                android:id="@+id/startHour"
                android:layout_width="0dp"
                android:layout_weight="2.8"
                android:padding="5dp"
                android:layout_height="wrap_content" />
        <TextView
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=":"/>
        <Spinner
                android:background="@android:color/white"
                android:id="@+id/startMinute"
                android:layout_width="0dp"
                android:layout_weight="2.8"
                android:padding="5dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:padding="5dp">
        <TextView
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:layout_gravity="center_vertical"
                android:text="@string/endCaption"/>
        <Spinner
                android:background="@android:color/white"
                android:id="@+id/endHour"
                android:layout_width="0dp"
                android:layout_weight="2.8"
                android:padding="5dp"
                android:layout_height="wrap_content" />
        <TextView
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text=":"/>
        <Spinner
                android:background="@android:color/white"
                android:id="@+id/endMinute"
                android:layout_width="0dp"
                android:layout_weight="2.8"
                android:padding="5dp"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:onClick="addToDb"
            android:textAlignment="center"/>
    <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:onClick="editInDb"
            android:textAlignment="center"/>
    <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:onClick="deleteFromDb"
            android:textAlignment="center"/>
</LinearLayout>
